--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@ body {
     font-weight: 300;
     color: #020202;
     background-color: #EEF8F0;
-    /* font-family: 'Poppins', sans-serif; */
 }
 
 .container {
@@ -51,5 +50,65 @@ body {
 }
 
 .heal {
+    position: relative;
+    height: calc(100vh - 158px);
+    margin-top: 60px;
     
+}
+.heal::after {
+    content: '';
+    background-image: url(../images/heal-bg2.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    width: 1079px;
+    height: calc(100vh - 158px);
+    right: 0;
+    top: 0;
+}
+.heal__inner {
+    position: relative;
+    padding-top: 110px;
+    padding-left: 130px;
+}
+.heal__inner::before {
+    content: '';
+    background-image: url(../images/heal-bg1.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 704px;
+    height: 655px;
+    position: absolute;
+    top: -143px;
+    left: -160px;
+}
+.heal__title {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 96px;
+    line-height: 144px;
+}
+.heal__subtitle {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 48px;
+    margin-top: 10px;
+    margin-bottom: 43px;
+}
+.heal__text {
+    max-width: 423px;
+    margin-bottom: 82px;
+}
+.heal__link {
+    display: inline-block;
+    background-color: #00873E;
+    color: #EEF8F0;
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 48px;
+    max-width: 263px;
+    border-radius: 24px;
+    text-align: center;
+    padding: 13px;
+    box-shadow: inset -6px -4px 20px rgba(0, 0, 0, 0.25);
 }
