--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,10 +23,21 @@ body {
     padding: 0 15px;
     margin: 0 auto;
 }
+.title {
+    font-size: 64px;
+    font-weight: 500;
+    line-height: 77px;
+    color: #020202;
+    text-align: center;
+}
 
 
 .header {
     margin-top: 23px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 .header__menu {
     display: flex;
@@ -64,11 +75,12 @@ body {
     width: 1079px;
     height: calc(100vh - 158px);
     right: 0;
-    top: 0;
+    top: 96px;
+    z-index: -1;
 }
 .heal__inner {
     position: relative;
-    padding-top: 110px;
+    padding-top: 210px;
     padding-left: 130px;
 }
 .heal__inner::before {
@@ -79,8 +91,9 @@ body {
     width: 704px;
     height: 655px;
     position: absolute;
-    top: -143px;
+    top: -40px;
     left: -160px;
+    z-index: -1;
 }
 .heal__title {
     font-family: 'Poppins', sans-serif;
@@ -111,4 +124,11 @@ body {
     text-align: center;
     padding: 13px;
     box-shadow: inset -6px -4px 20px rgba(0, 0, 0, 0.25);
+}
+
+.about {
+    background-image: url(../images/about-bg.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
 }
