--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,6 @@ body {
 
 
 .header {
-    margin-top: 23px;
     position: fixed;
     top: 0;
     left: 0;
@@ -45,6 +44,7 @@ body {
     justify-content: space-between;
     align-items: center;
     height: 75px;
+    margin-top: 23px;
 }
 .header__menu-items {
     display: flex;
@@ -59,6 +59,39 @@ body {
 }
 .header__search-text {
     margin-right: 20px;
+}
+.header__burger-btn {
+    display: none;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-color: transparent;
+    position: relative;
+    z-index: 2;
+}
+.header__burger-btn span {
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background-color: #00873E;
+    left: 5px;
+    top: 20px;
+    transition: transform .5s, opacity .5s;
+}
+.header__burger-btn span:nth-child(1) {
+    transform: translateY(-10px);
+}
+.header__burger-btn span:nth-child(3) {
+    transform: translateY(10px);
+}
+.header.open .header__burger-btn span:nth-child(1) {
+    transform: translateY(0) rotate(45deg);
+}
+.header.open .header__burger-btn span:nth-child(2) {
+    opacity: 0;
+}
+.header.open .header__burger-btn span:nth-child(3) {
+    transform: translateY(0) rotate(-45deg);
 }
 
 .heal {
@@ -235,4 +268,34 @@ body {
         line-height: 21px;
         margin: 0 auto 50px;
     }    
+}
+
+
+
+@media (max-width: 768px) {
+    .header__burger-btn {
+        display: block;
+    }
+    .header__menu-items {
+        position: absolute;
+        left: 0;
+        top: -100vh;
+        background: #E2F2E7;
+        display: block;
+        padding: 20px;
+        width: 100%;
+        height: 100vh;
+        transition: transform .5s;
+    }
+    .header__menu-list + .header__menu-list {
+        margin-left: 0;
+    }
+    .header__menu-list a {
+        display: block;
+        padding: 10px 0;
+    }
+
+    .header.open .header__menu-items {
+        transform: translateY(100vh);
+    }
 }
